-- fixed z-index --

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     position: sticky;
     top: 0;
     width: 100%;
-    z-index: 2000;
+    z-index: 999;
     min-height: 80px;
     background-color: #F8EFE0;
     display: flex;
